#188 Adding support for dataprepper auth.